--- a/themes/sdi4apps-theme/docroot/_diffs/css/custom.css
+++ b/themes/sdi4apps-theme/docroot/_diffs/css/custom.css
@@ -1,177 +1,279 @@
-@import url(bootstrap.min.css);
-@import url(bootstrap.sdi4apps.css);
-@import url(wp_sdi4apps.css);
+html.ext-strict {
+    overflow: hidden;
+    header #topprad {
+        padding:0;
+    }
 
-@font-face {
-    font-family: 'EntypoRegular';
-    src: url('font/entypo.eot');
-    src: url('font/entypo.eot?#iefix') format('embedded-opentype'),
-    url('font/entypo.woff') format('woff'),
-    url('font/entypo.ttf') format('truetype'),
-    url('font/entypo.svg#EntypoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    header .navbar-inverse {
+        padding-top:10px;
+        padding-bottom:0px;
+    }
+
+    .navbar-form {
+        margin-top:4px;
+        margin-bottom:4px;
+    }
+
+    .x4-body {
+        font-size: 14px;
+        font-family: 'Montserrat', sans-serif;
+    }
 }
 
 html {
-    overflow:auto;
+    body {
+        -webkit-overflow-scrolling:touch;
+        -webkit-font-smoothing: antialiased;
+        background-color: #ffffff;
+        color: #555;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    /* Titles */
+    h1, h2, h3, h4, h5, h6 {
+        color: #333;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
+
+    h1 {
+        font-size: 35px;
+        margin-bottom: 30px;
+        margin-top: 30px;
+    }
+
+    /* Paragraph & Typographic */
+    p {
+        font-size: 16px;
+        line-height: 28px;
+        margin-bottom: 25px;
+    }
+
+    .centered {
+        text-align: center;
+    }
+
+    /* Links */
+    a {
+        -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+         color: #009ee0;
+        transition: color 0.1s ease-in, background 0.1s ease-in;
+        word-wrap: break-word;
+    }
+
+    a:hover, a:focus {
+        color: #7b7b7b;
+        outline: 0;
+        text-decoration: none;
+    }
+
+    a:before, a:after {
+        -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+        transition: color 0.1s ease-in, background 0.1s ease-in;
+    }
+
+    hr {
+        border: 0;
+        border-top: 1px solid #ccc;
+        display: block;
+        height: 1px;
+        margin: 1em 0;
+        padding: 0;
+    }
+
+}
+.author-avatar img {
+    -webkit-border-radius: 95px;
+    -moz-border-radius: 95px;
+    border-radius: 95px;
 }
 
-.dockbar .aui-toolbar {
-    float:left;
+header {
+    #topprad {
+        padding: 6px 0;
+        background: #333;
+        color: #fff;
+        font-size: 17px;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+    }
+
+    #joinus {
+        color: #fff;
+        text-align: right
+    }
+
+    #joinus img {
+        margin: 0 0 5px 5px;
+    }
+
+    .dropdown-menu {
+        background-color:#009EE0;
+    }
+
+.navbar { margin-bottom: 0px; text-transform: uppercase; }
+
+.navbar-inverse {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    background-color: #009ee0;
+    border-color: #0081b7;
+}
+.navbar-static-top {
+    z-index:299
+}
+.navbar-inverse .navbar-nav > li > a { color: white; }
+
+.navbar-inverse .navbar-nav > li > a:hover { color: #222222; }
+
+.navbar-brand { font-size: 20px; font-weight: 700; letter-spacing: 2px; }
+
+.navbar-inverse .navbar-brand { color: white; }
+
+.navbar-inverse .navbar-toggle { border-color: transparent; }
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover { background-color: transparent; color: #222222; }
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus { background-color: transparent; color: #222222; }
+
+.progress-bar-theme { background-color: #1abc9c; }
+
+.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+    color: #efefef
 }
 
-.dockbar .aui-toolbar.user-toolbar {
-    float:right;
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
+    background-color: #1270BC;
+} /*.menu-item-81 { background:#ED1C24 ; border-radius: 5px; } */
+
+
+.navbar-collapse {
+    padding-top: 40px;
+}
 }
 
-span#lang img {
-    width: auto
-}
-
-span#userprofile img {
-    padding-right: 3px;
-    vertical-align: middle;
-    width: 23px;
-}
-
-div.dockbar {
-    background: #fff;
-    z-index: 5000;
-}
-
-div#main-content.p4b_wide_layout {
-    margin:0;
+div.container.no-border {
     padding:0;
-    width:auto;
-}
-
-div#main-content.p4b_wide_layout div#layout-column_column-1 {
     margin:0;
+    width: auto;
+}
+.no-border .portlet-column-content {
     padding:0;
 }
 
+/* +++++ WRAP SECTIONS +++++ */
+footer {
+    background-color: #2f2f2f; padding-bottom: 50px; padding-top: 50px;
 
-/** search **/
+    #ww { background-color: #f2f2f2; padding-bottom: 70px; padding-top: 70px; }
 
-div.container.right {
-    text-align:right;
-}
-.visuallyhidden {
-    border: 0 none;
-    clip: rect(0px, 0px, 0px, 0px);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
+p, h4 {
+    margin: 0 0 2%;
     padding: 0;
-    position: absolute;
-    width: 1px;
+    font-size: 94%;
+    line-height: 1.6;
 }
 
-span#search-form-metadata {
-    margin-right: 30px;
+    p { color: white; }
+
+    h4 { color: white; text-transform: uppercase; }
+
+    .eucopy {
+        color: #e7e7e7;
+    }
+    .widget-wrapper {
+       padding-bottom: 20px
+    }
+
+    #social ul {
+        margin: 0 0 30px;
+    }
+
+    #social ol {
+        margin: 0 20px 30px;
+        padding-left: 8px;
+        list-style-type: decimal
+    }
+
+    #social li {
+        display: inline-block;
+        margin: 0 0 12px;
+        font-size: 16px;
+        line-height: 28px;
+    }
+
+    #social ol>li {
+        margin: 0;
+    }
+
+    #social ul li:before {
+        color: #009EE0;
+        content: "\25A0";
+        font-size: 1em;
+        padding-right: .5em;
+        position: relative;
+        top: -.15em;
+    }
+
+    #social ul.wpfai-list li:before {
+        content: none;
+    }
 }
 
-form#search-map, form#search-metadata{
-    display:inline-block;
-    height: 20px;
-    position: relative;
+#text-8 h4 { color: #2F2F2F;}
+
+.zoomOverlay {
+    background-color: rgb(0, 158, 224) !important;
 }
 
-input#search-query-map, input#search-query-metadata {
+img.olTileImage {
+    max-width: none;
+}
+
+/* bootstrap vs EXT */
+.x-panel {
+    input .x-tree-node-cb {
+        margin-top:0;
+    }
+}
+
+.x4-panel {img { font:62.5%/ 1.4Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 62.5%/1.4;
+}
+
+legend {
+    border-color: initial;
+    border-style: none;
+    border-width: initial;
+    font: 62.5%/1.4 Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 62.5%/1.4;
+    margin-bottom: 0;
+    width: auto;
+}
+
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"],
+    input[type="datetime-local"], input[type="date"], input[type="month"],
+    input[type="time"], input[type="week"], input[type="number"], input[type="email"],
+    input[type="url"], input[type="search"], input[type="tel"], input[type="color"],
+    .uneditable-input {
+    height: 22px;
+    padding: 5px 1px;
+    margin-bottom: 0px;
     font-size: 12px;
-    padding: 2px 1px;
-    width: 250px;
-}
-
-span#search-icon {
-    cursor: pointer;
-    display: block;
-    height: 20px;
-    right: 2px;
-    position: absolute;
-    top: 2px;
-    width: 20px;
-    z-index: 3;
-}
-
-span#search-icon > button {
-    background-color: transparent;
-    background-image: url("../images/search.png");
-    background-repeat: no-repeat;
-    border: 0 none;
-    display: inline-block;
-    height: 15px;
-    margin-left: 3px;
-    padding: 0 6px;
-    vertical-align: text-top;
-    width: 15px;
-}
-
-.entypo_user:before {
-    display:inline-block;
-    font-family: 'EntypoRegular';
-    font-size: 30px;
-    font-weight: normal;
-    content:'\1F464';
-    margin-right:5px;
-    text-decoration: none;
-    vertical-align: middle;
-}
-
-.entypo_mail:after {
-    display:inline-block;
-    font-family: 'EntypoRegular';
-    font-size: 30px;
-    font-weight: normal;
-    content:'\2709';
-    margin-left:5px;
-    text-decoration: none;
-    vertical-align: middle;
-}
-
-
-/* SPECIALS */
-div.journal-content-article {
-    font-size: 130%
-}
-
-div.journal-content-article h3 {
-    color:#5979A6;
-}
-
-div.journal-content-article h2 {
-    color:#5979A6;
-    font-size: 1.4em;
-    margin: 1em 0;
-}
-
-div.journal-content-article ol {
-    list-style: decimal outside none
-}
-
-div.journal-content-article ul {
-    list-style: disc outside none
-}
-
-div.journal-content-article ol, div.journal-content-article ul, div.journal-content-article dl {
-    margin-left: 2em;
-}
-
-div.journal-content-article blockquote, div.journal-content-article ol, div.journal-content-article ul, div.journal-content-article dl {
-    margin: 1em;
-}
-
-div.journal-content-article p {
-    margin-bottom: 1em;
-}
-
-div.journal-content-article strong {
+    line-height: normal;
     color: #000;
-    font-weight: bold;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
 }
-
-div.journal-content-article table {
-    border-collapse: separate;
-    border-spacing: 2px;
 }
