--- a/themes/sdi4apps-theme/docroot/_diffs/templates/navigation.vm
+++ b/themes/sdi4apps-theme/docroot/_diffs/templates/navigation.vm
@@ -1,35 +1,19 @@
-<nav class="$nav_css_class" role="navigation">
-    <div class="navbar navbar-inverse navbar-static-top">
-        <div class="container">
-            <div class="navbar-header">
-                <div id="logo">
-                    <a rel="home" href="http://$portalURL"><img src="$images_folder/sdi4apps_logo_web.png" alt="Logo" /></a>
-                </div>
-            </div>
-            <div id="joinus">Join us at <a target="_blank" href="http://www.linkedin.com/groups/SDI4Apps-3516067"><img width="100" height="24" alt="LinkedIn-Logo" rel="magnific" src="http://sdi4apps.eu/wp-content/uploads/2014/05/LinkedIn-Logo-2C.png"></a></div>
-            <div class="navbar-collapse collapse">
-                <ul id="menu-global-menu" class="nav navbar-nav navbar-right">
-                    #foreach ($nav_item in $nav_items)
-                        #set ($url = $nav_item.getRegularURL())
-                        #if ($nav_item.isSelected() || $nav_item.isChildSelected())
-                            #set ($selected_nav = $nav_item)
-                            <li class="menu-item active">
-                        #else
-                            <li class="menu-item">
-                        #end
-            
-                            <a href="$url" $nav_item.getTarget()><span>$nav_item.icon() $htmlUtil.escape($nav_item.getName())</span></a>
-            
-                        </li>
-                    #end
-                </ul>
-            </div>
-            <div style="clear: both;"></div>
-            #if ($selected_nav.hasChildren())
-                <ul class="child-menu">
-                    #foreach ($nav_child in $selected_nav.getChildren())
+<div class="navbar-collapse collapse navbar-responsive-collapse">
+    <ul id="menu-global-menu" class="nav navbar-nav navbar-right">
+        #foreach ($nav_item in $nav_items)
+            #if ($nav_item.isSelected())
+                <li class="active">
+            #elseif ($nav_item.hasChildren())
+                <li class="dropdown">
+            #else
+                <li>
+            #end
+            #if ($nav_item.hasChildren())
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">$nav_item.getName() <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    #foreach ($nav_child in $nav_item.getChildren())
                         #if ($nav_child.isSelected())
-                            <li class="selected">
+                            <li class="active">
                         #else
                             <li>
                         #end
@@ -37,7 +21,10 @@
                         </li>
                     #end
                 </ul>
+            #else
+                <a href="$nav_item.getURL()" $nav_item.getTarget()>$nav_item.getName()</a>
             #end
-        </div>
-    </div>
-</nav>
+        </li>
+        #end
+    </ul>
+<!--/.nav-collapse -->
