--- a/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
@@ -6,10 +6,9 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9 #language("lang.dir")" dir="#language("lang.dir")" lang="$w3c_language_id"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js #language("lang.dir")" dir="#language("lang.dir")" lang="$w3c_language_id"> <!--<![endif]-->
 
-
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>$the_title - $company_name</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <script src="/wwwlibs/hslayers/HS.js" type="text/javascript"></script>
 
     <script type="text/javascript">
@@ -72,6 +71,8 @@ $theme.include($body_top_include)
     <div class="container">
     #end
 
+
+
         #if ($selectable)
             $theme.include($content_include)
         #else
@@ -89,11 +90,11 @@ $theme.include($body_top_include)
 
 $theme.include($body_bottom_include)
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="$javascript_folder/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="$javascript_folder/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="$css_folder/font-awesome.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 
 $theme.include($bottom_include)
