--- a/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
@@ -6,8 +6,7 @@
 
 <head>
     <title>$the_title - $company_name</title>
-
-    <meta content="initial-scale=1.0, width=device-width" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script src="/wwwlibs/hslayers/HS.js" type="text/javascript"></script>
 
     <script type="text/javascript">
@@ -41,11 +40,16 @@
     #set ($footer = $theme.getSetting("footer"))
 
     $theme.include($top_head_include)
-    <link rel="stylesheet" media="screen,projection" type="text/css" href="/wwwlibs/ext/resources/css/ext-all.css"></link>
-    <link rel="stylesheet" media="screen,projection" type="text/css" href="/wwwlibs/ext/resources/css/xtheme-gray.css"></link>
+
     <link rel='stylesheet' id='googleFonts-css'  href='//fonts.googleapis.com/css?family=Oxygen:400,300,700' type='text/css' media='all' />
 
     <script src="$javascript_folder/iframefull.js" defer="defer"></script>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js7"></script>
+    <script>window.jQuery || document.write('<script src="$javascript_folder/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+    <link rel="stylesheet" href="//bootswatch.com/paper/bootstrap.min.css">
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <body class="$css_class">
@@ -123,8 +127,6 @@ $theme.include($body_bottom_include)
 
 $theme.include($bottom_include)
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="$javascript_folder/vendor/jquery-1.11.3.min.js"><\/script>')</script>
 </body>
 
 </html>
