--- a/portlets/mapViewer-lite-portlet/docroot/css/main.css
+++ b/portlets/mapViewer-lite-portlet/docroot/css/main.css
@@ -9,3 +9,25 @@ div.ol-control button{
 div.ng-scope #toolbar button:hover {
     background-image:none;
 }
+
+div.ol-zoom {
+	bottom: 62px;
+	top: auto;
+}
+
+ol, ul, dl {
+    margin-left: initial;
+}
+
+blockquote, ul, ol, dl {
+    margin: initial;
+}
+
+input#search_address {
+    background-color: white;
+    padding-left: 10px;
+}
+
+div.panelspace {
+	box-shadow:none;
+}
