--- a/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
@@ -78,7 +78,7 @@
                                 </li>
                                 <li class="divider-vertical " id="whxm_" role="presentation"> </li>
                                 <li class="sign-in " id="ljla_" role="presentation">
-                                    <a class="" data-redirect="true" href="https://$portalURL/cas-server/login?service=http://$portalURL/php/cas.html" id="" role="menuitem" title="">
+                                    <a class="" data-redirect="true" href="$sign_in_url" id="" role="menuitem" title="">
                                         <i class="icon-user"></i>
                                         <span class="nav-item-label"> $sign_in_text </span>
                                     </a>
