--- a/portlets/mapViewer-portlet/docroot/css/main.css
+++ b/portlets/mapViewer-portlet/docroot/css/main.css
@@ -31,3 +31,45 @@ input#search_address {
 div.panelspace {
 	box-shadow:none;
 }
+.aui .ng-scope {
+line-height: 1.42857143;
+[class^="icon-"], [class*=" icon-"] {font-family:'WebHostingHub-Glyphs';background:none;width:auto;height:auto;font-style:normal}
+
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"],  input[type="email"],  input[type="url"],  input[type="search"],  input[type="tel"],  input[type="color"],  .uneditable-input {
+    display: block;
+    height: 34px;
+    padding: 6px 12px;
+    margin-bottom: 0px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    vertical-align: baseline;
+}
+
+input.form-control, textarea.form-control, .uneditable-input.form-control {
+    width: 100%;
+}
+
+label {
+	display:inline-block;
+}
+
+ul, ol {
+    margin: initial;
+}
+
+.btn {
+    padding: 6px 12px;
+}
+.btn-group-xs>.btn, .btn-xs {
+	padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
+
+
+}
