--- a/themes/sdi4apps-theme/docroot/_diffs/css/custome.css
+++ b/themes/sdi4apps-theme/docroot/_diffs/css/custome.css
@@ -20,6 +20,18 @@ div#wrapper.no-border div#content {
     margin:0
 }
 
+.aui a {
+	color: #337ab7;
+}
+
+.aui .nav-pills > .active > a, .aui .nav-pills > .active > a:hover, .aui .nav-pills > .active > a:focus {
+    background-color: #337ab7;
+}
+
+.aui .nav-tabs > li > a, .aui .nav-pills > li > a {
+	line-height: 1.42857143;
+}
+
 .portlet-dockbar .navbar {
     min-height:46px;
 }
