--- a/portlets/mapViewer-portlet/docroot/css/main.css
+++ b/portlets/mapViewer-portlet/docroot/css/main.css
@@ -11,8 +11,8 @@ div.ng-scope #toolbar button:hover {
 }
 
 div.ol-zoom {
-	bottom: 62px;
-	top: auto;
+    bottom: 62px;
+    top: auto;
 }
 
 ol, ul, dl {
@@ -29,47 +29,52 @@ input#search_address {
 }
 
 div.panelspace {
-	box-shadow:none;
+    box-shadow:none;
 }
+
 .aui .ng-scope {
-line-height: 1.42857143;
+
+    ul, ol {
+       margin: initial;
+    }
+
+    a.sidebar-main {
+       padding:0;
+    }
+
+    ul.hs-lm-baselayerlist {
+        margin-bottom: 0;
+    }
+
+    .hs-dataset-panel .panel-body {
+        padding: 0;
+    }
+
 [class^="icon-"], [class*=" icon-"] {font-family:'WebHostingHub-Glyphs';background:none;width:auto;height:auto;font-style:normal}
 
-select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"],  input[type="email"],  input[type="url"],  input[type="search"],  input[type="tel"],  input[type="color"],  .uneditable-input {
-    display: block;
-    height: 34px;
-    padding: 6px 12px;
-    margin-bottom: 0px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    vertical-align: baseline;
-}
+    .icon-refresh:before {
+        content: '\f078';
+    }
 
-input.form-control, textarea.form-control, .uneditable-input.form-control {
-    width: 100%;
-}
+    .icon-link:before {
+        content: '\f022';
+    }
 
-label {
-	display:inline-block;
-}
+    .modal {
+        margin-left:0;
+        background-color: initial;
+        width: auto;
+    }
 
-ul, ol {
-    margin: initial;
-}
+    .close {
+        font-size: 20px;
+    }
 
-.btn {
-    padding: 6px 12px;
-}
-.btn-group-xs>.btn, .btn-xs {
-	padding: 1px 5px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
-}
-
-
+    .mainpanel {
+        border: initial;
+        margin-bottom:0;
+    }
+    .sidebar-list {
+        border-radius: initial;
+    }
 }
