--- a/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/themes/sdi4apps-theme/docroot/_diffs/templates/portal_normal.vm
@@ -42,9 +42,10 @@
     <link rel='stylesheet' id='googleFonts-css'  href='//fonts.googleapis.com/css?family=Oxygen:400,300,700' type='text/css' media='all' />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="$javascript_folder/vendor/jquery.min.js"><\/script>')</script>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="$css_folder/bootstrap.min.css">
+    <link rel="stylesheet" href="$css_folder/bootstrap-theme.min.css">
 
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="$javascript_folder/bootstrap.min.js"></script>
     <script src="$javascript_folder/iframefull.js" defer="defer"></script>
 </head>
 
@@ -123,5 +124,4 @@ $theme.include($body_bottom_include)
 $theme.include($bottom_include)
 
 </body>
-
 </html>
