Fix bootstrap theme

--- a/themes/sdi4apps-theme/docroot/_diffs/css/bootstrap.css
+++ b/themes/sdi4apps-theme/docroot/_diffs/css/bootstrap.css
@@ -6425,55 +6425,55 @@ button.aui .ng-scope .close {
 }
 .aui .ng-scope .clearfix:before,
 .aui .ng-scope .clearfix:after,
-.aui .ng-scope .aui .ng-scope .dl-horizontal dd:before,
-.aui .ng-scope .aui .ng-scope .dl-horizontal dd:after,
-.aui .ng-scope .aui .ng-scope .container:before,
-.aui .ng-scope .aui .ng-scope .container:after,
-.aui .ng-scope .aui .ng-scope .container-fluid:before,
-.aui .ng-scope .aui .ng-scope .container-fluid:after,
-.aui .ng-scope .aui .ng-scope .row:before,
-.aui .ng-scope .aui .ng-scope .row:after,
-.aui .ng-scope .aui .ng-scope .form-horizontal .form-group:before,
-.aui .ng-scope .aui .ng-scope .form-horizontal .form-group:after,
-.aui .ng-scope .aui .ng-scope .btn-toolbar:before,
-.aui .ng-scope .aui .ng-scope .btn-toolbar:after,
-.aui .ng-scope .aui .ng-scope .btn-group-vertical > .btn-group:before,
-.aui .ng-scope .aui .ng-scope .btn-group-vertical > .btn-group:after,
-.aui .ng-scope .aui .ng-scope .nav:before,
-.aui .ng-scope .aui .ng-scope .nav:after,
-.aui .ng-scope .aui .ng-scope .navbar:before,
-.aui .ng-scope .aui .ng-scope .navbar:after,
-.aui .ng-scope .aui .ng-scope .navbar-header:before,
-.aui .ng-scope .aui .ng-scope .navbar-header:after,
-.aui .ng-scope .aui .ng-scope .navbar-collapse:before,
-.aui .ng-scope .aui .ng-scope .navbar-collapse:after,
-.aui .ng-scope .aui .ng-scope .pager:before,
-.aui .ng-scope .aui .ng-scope .pager:after,
-.aui .ng-scope .aui .ng-scope .panel-body:before,
-.aui .ng-scope .aui .ng-scope .panel-body:after,
-.aui .ng-scope .aui .ng-scope .modal-header:before,
-.aui .ng-scope .aui .ng-scope .modal-header:after,
-.aui .ng-scope .aui .ng-scope .modal-footer:before,
-.aui .ng-scope .aui .ng-scope .modal-footer:after {
+.aui .ng-scope .dl-horizontal dd:before,
+.aui .ng-scope .dl-horizontal dd:after,
+.aui .ng-scope .container:before,
+.aui .ng-scope .container:after,
+.aui .ng-scope .container-fluid:before,
+.aui .ng-scope .container-fluid:after,
+.aui .ng-scope .row:before,
+.aui .ng-scope .row:after,
+.aui .ng-scope .form-horizontal .form-group:before,
+.aui .ng-scope .form-horizontal .form-group:after,
+.aui .ng-scope .btn-toolbar:before,
+.aui .ng-scope .btn-toolbar:after,
+.aui .ng-scope .btn-group-vertical > .btn-group:before,
+.aui .ng-scope .btn-group-vertical > .btn-group:after,
+.aui .ng-scope .nav:before,
+.aui .ng-scope .nav:after,
+.aui .ng-scope .navbar:before,
+.aui .ng-scope .navbar:after,
+.aui .ng-scope .navbar-header:before,
+.aui .ng-scope .navbar-header:after,
+.aui .ng-scope .navbar-collapse:before,
+.aui .ng-scope .navbar-collapse:after,
+.aui .ng-scope .pager:before,
+.aui .ng-scope .pager:after,
+.aui .ng-scope .panel-body:before,
+.aui .ng-scope .panel-body:after,
+.aui .ng-scope .modal-header:before,
+.aui .ng-scope .modal-header:after,
+.aui .ng-scope .modal-footer:before,
+.aui .ng-scope .modal-footer:after {
   content: " ";
   display: table;
 }
 .aui .ng-scope .clearfix:after,
-.aui .ng-scope .aui .ng-scope .dl-horizontal dd:after,
-.aui .ng-scope .aui .ng-scope .container:after,
-.aui .ng-scope .aui .ng-scope .container-fluid:after,
-.aui .ng-scope .aui .ng-scope .row:after,
-.aui .ng-scope .aui .ng-scope .form-horizontal .form-group:after,
-.aui .ng-scope .aui .ng-scope .btn-toolbar:after,
-.aui .ng-scope .aui .ng-scope .btn-group-vertical > .btn-group:after,
-.aui .ng-scope .aui .ng-scope .nav:after,
-.aui .ng-scope .aui .ng-scope .navbar:after,
-.aui .ng-scope .aui .ng-scope .navbar-header:after,
-.aui .ng-scope .aui .ng-scope .navbar-collapse:after,
-.aui .ng-scope .aui .ng-scope .pager:after,
-.aui .ng-scope .aui .ng-scope .panel-body:after,
-.aui .ng-scope .aui .ng-scope .modal-header:after,
-.aui .ng-scope .aui .ng-scope .modal-footer:after {
+.aui .ng-scope .dl-horizontal dd:after,
+.aui .ng-scope .container:after,
+.aui .ng-scope .container-fluid:after,
+.aui .ng-scope .row:after,
+.aui .ng-scope .form-horizontal .form-group:after,
+.aui .ng-scope .btn-toolbar:after,
+.aui .ng-scope .btn-group-vertical > .btn-group:after,
+.aui .ng-scope .nav:after,
+.aui .ng-scope .navbar:after,
+.aui .ng-scope .navbar-header:after,
+.aui .ng-scope .navbar-collapse:after,
+.aui .ng-scope .pager:after,
+.aui .ng-scope .panel-body:after,
+.aui .ng-scope .modal-header:after,
+.aui .ng-scope .modal-footer:after {
   clear: both;
 }
 .aui .ng-scope .center-block {
